--- a/DropBear.Blazor/Components/Cards/DropBearCard.razor.css
+++ b/DropBear.Blazor/Components/Cards/DropBearCard.razor.css
@@ -133,6 +133,7 @@
   flex-grow: 1; /* Allow the body to grow and push the footer down */
   display: flex;
   flex-direction: column;
+  margin-top: 15px;
 }
 
 /* Image card styles */
