--- a/DropBear.Blazor/Components/Lists/DropBearList.razor
+++ b/DropBear.Blazor/Components/Lists/DropBearList.razor
@@ -13,18 +13,28 @@
         <i class="fas fa-chevron-up drop-bear-list-icon"></i>
     </div>
     <ul class="drop-bear-list-list">
-        @foreach (var item in Items)
+        @if (Items == null || Items.Count == 0)
         {
             <li class="drop-bear-list-item">
-                @if (ItemTemplate != null)
-                {
-                    @ItemTemplate(item)
-                }
-                else
-                {
-                    @item.ToString()
-                }
+                <span class="drop-bear-list-item-empty">No items to display</span>
             </li>
         }
+        else
+        {
+            @foreach (var item in Items)
+            {
+                <li class="drop-bear-list-item">
+                    @if (ItemTemplate != null)
+                    {
+                        @ItemTemplate(item)
+                    }
+                    else
+                    {
+                        @item.ToString()
+                    }
+                </li>
+            }
+        }
+
     </ul>
 </div>
