--- a/DropBear.Blazor/Components/Lists/DropBearList.razor.css
+++ b/DropBear.Blazor/Components/Lists/DropBearList.razor.css
@@ -2,7 +2,7 @@
   background-color: #fff;
   border-radius: var(--border-radius-md, 8px);
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  margin-bottom: 20px;
+  margin: 15px 7px;
   overflow: hidden;
   transition: all var(--transition-normal, 300ms ease-in-out);
 }
