--- a/DropBear.Blazor/Components/Grids/DropBearDataGrid.razor.css
+++ b/DropBear.Blazor/Components/Grids/DropBearDataGrid.razor.css
@@ -38,12 +38,12 @@
 
 .dropbear-datagrid {
   font-family: "Poppins", sans-serif;
-  font-size: calc(var(--font-size-sm) * var(--sqrt-golden-ratio));
+  font-size: calc(var(--font-size-md));
   border-radius: var(--border-radius-md);
   overflow: hidden;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   transition: box-shadow var(--transition-normal);
-  animation: fadeIn 0.5s ease-out;
+  animation: fadeIn var(--transition-normal);
   background-color: var(--bg-primary);
   color: var(--text-primary);
 }
@@ -56,10 +56,11 @@
 .datagrid-header {
   background: var(--accent-gradient);
   color: var(--bg-primary);
-  padding: var(--spacing-md);
+  padding: var(--padding-default);
   display: flex;
   justify-content: space-between;
   align-items: center;
+  line-height: var(--line-height-base);
 }
 
 .datagrid-header h2 {
@@ -139,7 +140,6 @@
 
 .datagrid-table-wrapper {
   overflow-x: auto;
-
 }
 
 .datagrid-row {
@@ -187,7 +187,7 @@
 }
 
 .datagrid-row.header .datagrid-cell {
-  font-weight: 600;
+  font-weight: 500;
 }
 
 .datagrid-row:hover:not(.header) {
@@ -207,8 +207,6 @@
   display: flex;
   align-items: center;
   background-color: var(--bg-tertiary);
-  border-radius: 4px;
-  padding: 0.25rem;
 }
 
 .dropbear-datagrid .pagination button {
@@ -251,7 +249,6 @@
 
 .datagrid-footer .pagination .btn-icon {
   color: var(--text-primary);
-  border: 1px solid var(--clr-rock-blue);
 }
 
 
