--- a/DropBear.Blazor/Components/Grids/DropBearDataGrid.razor.css
+++ b/DropBear.Blazor/Components/Grids/DropBearDataGrid.razor.css
@@ -38,7 +38,7 @@
 
 .dropbear-datagrid {
   font-family: "Poppins", sans-serif;
-  font-size: calc(var(--font-size-md));
+  font-size: calc(var(--font-size-sm));
   border-radius: var(--border-radius-md);
   overflow: hidden;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -56,11 +56,11 @@
 .datagrid-header {
   background: var(--accent-gradient);
   color: var(--bg-primary);
-  padding: var(--padding-default);
+  padding: var(--spacing-md);
   display: flex;
   justify-content: space-between;
   align-items: center;
-  line-height: var(--line-height-base);
+  /*line-height: var(--line-height-base);*/
 }
 
 .datagrid-header h2 {
@@ -148,7 +148,7 @@
 }
 
 .datagrid-cell {
-  padding: 0.75rem;
+  padding: var(--padding-default);
   text-align: left;
   border-bottom: 1px solid var(--border-color);
   overflow: hidden;
@@ -174,7 +174,7 @@
 }
 
 .datagrid-cell-actions {
-  width: 100px; /* Adjust this value as needed */
+  width: 150px; /* Adjust this value as needed */
   flex-shrink: 0;
 }
 
