Added slight border to search-input of datagrid

--- a/DropBear.Blazor/Components/Grids/DropBearDataGrid.razor.css
+++ b/DropBear.Blazor/Components/Grids/DropBearDataGrid.razor.css
@@ -96,7 +96,7 @@
 .search-input {
   background-color: var(--bg-secondary);
   color: var(--text-primary);
-  border: none;
+  border: 1px solid var(--clr-border);;
   padding: 0.5rem 1rem;
   border-radius: 4px 0 0 4px;
   transition: background-color var(--transition-normal);
