Further diagnosing issues with context menu.

--- a/DropBear.Blazor/Components/Menus/DropBearContextMenu.razor
+++ b/DropBear.Blazor/Components/Menus/DropBearContextMenu.razor
@@ -1,42 +1,41 @@
 ﻿@inherits DropBear.Blazor.Components.Bases.DropBearComponentBase
 
-<div @ref="_triggerElement" id="@_contextMenuId" @oncontextmenu="OnContextMenu" @oncontextmenu:preventDefault>
+<div @ref="_triggerElement" id="@_contextMenuId" class="context-menu-container" @oncontextmenu="OnContextMenu" @oncontextmenu:preventDefault>
     @ChildContent
-</div>
-
-<div class="context-menu @(_isVisible ? "active" : "")" style="left: @(_left)px; top: @(_top)px;">
-    @foreach (var item in MenuItems)
-    {
-        if (item.IsSeparator)
+    <div class="context-menu @(_isVisible ? "active" : "")" style="left: @(_left)px; top: @(_top)px;">
+        @foreach (var item in MenuItems)
         {
-            <div class="context-menu-separator"></div>
+            if (item.IsSeparator)
+            {
+                <div class="context-menu-separator"></div>
+            }
+            else
+            {
+                <div class="context-menu-item @(item.IsDanger ? "danger" : "") @(item.HasSubmenu ? "has-submenu" : "")"
+                     @onclick="() => OnItemClick(item)">
+                    @if (!string.IsNullOrEmpty(item.IconClass))
+                    {
+                        <i class="@item.IconClass"></i>
+                    }
+                    <span>@item.Text</span>
+                    @if (item.HasSubmenu)
+                    {
+                        <i class="fas fa-chevron-right submenu-icon"></i>
+                        <div class="submenu">
+                            @foreach (var subItem in item.Submenu)
+                            {
+                                <div class="context-menu-item" @onclick="() => OnItemClick(subItem)">
+                                    @if (!string.IsNullOrEmpty(subItem.IconClass))
+                                    {
+                                        <i class="@subItem.IconClass"></i>
+                                    }
+                                    <span>@subItem.Text</span>
+                                </div>
+                            }
+                        </div>
+                    }
+                </div>
+            }
         }
-        else
-        {
-            <div class="context-menu-item @(item.IsDanger ? "danger" : "") @(item.HasSubmenu ? "has-submenu" : "")"
-                 @onclick="() => OnItemClick(item)">
-                @if (!string.IsNullOrEmpty(item.IconClass))
-                {
-                    <i class="@item.IconClass"></i>
-                }
-                <span>@item.Text</span>
-                @if (item.HasSubmenu)
-                {
-                    <i class="fas fa-chevron-right submenu-icon"></i>
-                    <div class="submenu">
-                        @foreach (var subItem in item.Submenu)
-                        {
-                            <div class="context-menu-item" @onclick="() => OnItemClick(subItem)">
-                                @if (!string.IsNullOrEmpty(subItem.IconClass))
-                                {
-                                    <i class="@subItem.IconClass"></i>
-                                }
-                                <span>@subItem.Text</span>
-                            </div>
-                        }
-                    </div>
-                }
-            </div>
-        }
-    }
+    </div>
 </div>
