--- a/DropBear.Blazor/Components/Menus/DropBearContextMenu.razor.css
+++ b/DropBear.Blazor/Components/Menus/DropBearContextMenu.razor.css
@@ -15,6 +15,9 @@
 
 .context-menu-container {
   position: relative;
+  /* Ensure the container takes up the full width and height of its parent */
+  width: 100%;
+  height: 100%;
 }
 
 .context-menu {
