--- a/DropBear.Blazor/Components/Grids/DropBearDataGrid.razor
+++ b/DropBear.Blazor/Components/Grids/DropBearDataGrid.razor
@@ -99,11 +99,11 @@ else
                     {
                         @foreach (var item in DisplayedItems)
                         {
-                            <tr class="datagrid-row @(SelectedItems.Contains(item) ? "selected" : "")">
+                            <tr class="datagrid-row @(SelectedItems.Contains(item) ? "selected" : "")" @onclick="() => HandleRowClick(item)">
                                 @if (EnableMultiSelect)
                                 {
                                     <td class="datagrid-cell" style="width: 40px;">
-                                        <input type="checkbox" checked="@SelectedItems.Contains(item)" @onchange="@(e => ToggleSelection(item, e.Value is bool b && b))"/>
+                                        <input type="checkbox" checked="@SelectedItems.Contains(item)" @onchange="@(e => ToggleSelection(item, e.Value is bool b && b))" @onclick:stopPropagation />
                                     </td>
                                 }
                                 @foreach (var column in _columns)
@@ -126,13 +126,13 @@ else
                                     <td class="datagrid-cell datagrid-cell-actions">
                                         @if (AllowEdit)
                                         {
-                                            <button class="btn-icon" @onclick="@(() => EditItem(item))">
+                                            <button class="btn-icon" @onclick:stopPropagation="true" @onclick="@(() => EditItem(item))">
                                                 <i class="fas fa-edit"></i>
                                             </button>
                                         }
                                         @if (AllowDelete)
                                         {
-                                            <button class="btn-icon" @onclick="@(() => DeleteItem(item))">
+                                            <button class="btn-icon" @onclick:stopPropagation="true" @onclick="@(() => DeleteItem(item))">
                                                 <i class="fas fa-trash"></i>
                                             </button>
                                         }
