--- a/DropBear.Blazor/Components/Grids/DropBearDataGrid.razor
+++ b/DropBear.Blazor/Components/Grids/DropBearDataGrid.razor
@@ -99,7 +99,10 @@ else
                     {
                         @foreach (var item in DisplayedItems)
                         {
-                            <tr class="datagrid-row @(SelectedItems.Contains(item) ? "selected" : "")" @onclick="() => HandleRowClick(item)">
+                    <tr class="datagrid-row @(SelectedItems.Contains(item) ? "selected" : "")"
+                        @onclick="() => HandleRowClick(item)"
+                        @oncontextmenu="(e) => HandleRowContextMenu(e, item)"
+                        @oncontextmenu:preventDefault>
                                 @if (EnableMultiSelect)
                                 {
                                     <td class="datagrid-cell" style="width: 40px;">
