--- a/DropBear.Blazor/Components/Grids/DropBearDataGrid.razor.css
+++ b/DropBear.Blazor/Components/Grids/DropBearDataGrid.razor.css
@@ -72,7 +72,7 @@
   justify-content: space-between;
   align-items: center;
   position: relative;
-  z-index: var(--z-index-fixed);
+  /*z-index: var(--z-index-fixed);*/
   /*line-height: var(--line-height-base);*/
 }
 
