Removed some unused components.

--- a/DropBear.Blazor.TestApp/Components/Pages/Home.razor
+++ b/DropBear.Blazor.TestApp/Components/Pages/Home.razor
@@ -1,17 +1,20 @@
 ﻿@page "/"
-@using DropBear.Blazor.Components.Badges
+@using DropBear.Blazor.Components.Alerts
 @using DropBear.Blazor.Enums
 @using DropBear.Blazor.Interfaces
 @rendermode InteractiveServer
 @inject ISnackbarNotificationService SnackbarService
+<DropBearSnackbarNotificationContainer/>
+
+@code{
+
+    protected override void OnAfterRender(bool firstRender)
+    {
+        if (firstRender)
+        {
+            SnackbarService.ShowAsync("Welcome to the MochaDBV3.Blazor application!", SnackbarType.Success, duration: 5000);
+        }
+    }
 
 
-<DropBearBadge Color="BadgeColor.Success"
-               Shape="BadgeShape.Normal"
-               Icon="fas fa-check"
-               Text="Completed"
-               Tooltip="Task completed successfully"/>
-
-<DropBearBadge Color="BadgeColor.Warning"
-               Icon="fas fa-exclamation-triangle"
-               Tooltip="Warning: Proceed with caution"/>
+}
